--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,6 +148,7 @@
     <string name="createAccount">Create an account</string>
     <string name="moreInfo">To get more information</string>
     <string name="exam_associated_succesful">Exam successfully associated</string>
+    <string name="exam_already_associated">Exam already associated</string>
     <string name="exam_associated_fail">Exam not found or Wrong accesscode</string>
     <string name="exam_associated_internalfail">Exam not found</string>
     <string name="identification_required">Identification is required!</string>
@@ -157,5 +158,7 @@
     <string name="test_add_exam_accesscode">01012001</string>
     <string name="test_add_exam_accesscode_wrong">01012002</string>
     <string name="associate">Associate Exam</string>
+    <string name="exam_referring_phys">Referring physician</string>
+    <string name="download_documents">Documents</string>
 
 </resources>
