--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,6 @@
     <string name="Report">Report</string>
     <string name="Images">Images</string>
     <string name="Close">Close</string>
-
-
     <string name="search">Search</string>
     <string name="menu_search">Search menu</string>
     <string name="search_hint">search hint</string>
@@ -48,7 +46,6 @@
     <string name="comment_example">Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken.</string>
     <string name="information_error">NOT FOUND</string>
     <string name="information_error_response">Try again or contact an administrator</string>
-
     <string name="patient">Patient</string>
     <string name="report">Report</string>
     <string name="reporting">Reporting Physician</string>
@@ -73,7 +70,7 @@
     <string name="logout">Logout</string>
     <string name="examIdentification">Exam Identification</string>
     <string name="accessCode">Access Code</string>
-    <string name="gs_exam_write_comment_hint">Start writing a comment...</string>
+    <string name="gs_exam_write_comment_hint">Start writing a comment &#8230;</string>
     <string name="clinic">Clinic</string>
     <string name="sort_icon">Sort Icon</string>
     <string name="forgot_pwd">Forgot your password?</string>
@@ -107,18 +104,6 @@
     <string name="create_account">CREATE ACCOUNT</string>
     <string name="must_befilled_in">Make sure all fields are filled in.</string>
     <string name="invalid_entry">is not a valid entry.\\nCheck for mistakes and try again please..</string>
-    <string name="createAccount">Create an account</string>
-    <string name="moreInfo">To get more information</string>
-    <string name="exam_associated_succesful">Exam successfully associated</string>
-    <string name="exam_associated_fail">Exam not found or Wrong accesscode</string>
-    <string name="exam_associated_internalfail">Exam not found</string>
-    <string name="identification_required">Identification is required!</string>
-    <string name="accesscode_required">Access code is required!</string>
-    <string name="id_and_ac_required">Identification and access code are required!</string>
-    <string name="test_add_exam_id">GKS0001</string>
-    <string name="test_add_exam_accesscode">01012001</string>
-    <string name="test_add_exam_accesscode_wrong">01012002</string>
-    <string name="associate">Associate Exam</string>
     <string name="country">Country *</string>
     <string name="brazil">Brazil</string>
     <string name="other">Other</string>
