--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,6 +173,7 @@
     <string name="success">Success</string>
     <string name="test_anon_patient">JOHN SMITH</string>
     <string name="test_anon_reporting_phys">Médico Teste</string>
+    <string name="check_id_for_description">Check the id for a gist of what the view represents</string>
 
     <string-array name="image_ids">
         <item>@drawable/image_1</item>
