--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,10 +154,8 @@
     <string name="patient_role">ROLE_PATIENT</string>
     <string name="pdf">Pdf icon</string>
     <string name="no_report">No report was found for this exam.</string>
-    <string name="snackDocNotFound">Document not found!</string>
-    <string name="noPdfReaderDialogTitle">No Pdf Reader</string>
-    <string name="noPdfReaderDialogText">Could not find pdf reader to open document. Please install a pdf reader application!</string>
-    <string name="opening">Opening..</string>
+    <string name="snack_doc_not_found">Document not found!</string>
+    <string name="opened">Opened</string>
     <string name="loading">Loading</string>
     <string name="in_progress">In progress</string>
     <string name="register_failed">Failed to register</string>
@@ -178,5 +176,7 @@
     <string name="test_anon_patient">JOHN SMITH</string>
     <string name="test_anon_reporting_phys">Médico Teste</string>
     <string name="check_id_for_description">Check the id for a gist of what the view represents</string>
+    <string name="pdf_no_perm">Document could not be added to your download folder</string>
+    <string name="pdf_no_reader">No PDF Reader found on this phone. Please install one and try again.</string>
 
 </resources>
