--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,58 +2,58 @@
     <!-- Application -->
     <string name="gs_app_name">Guardasaude</string>
     <string name="gs_app_name_login">guarda saúde</string>
-    <string name="username">Username</string>
-    <string name="password">Password</string>
+    <string name="username">Usuário ou Email</string>
+    <string name="password">Senha</string>
     <string name="login">Login</string>
-    <string name="authenticating_message">Authenticating&#8230;</string>
-    <string name="exams">Exams</string>
-    <string name="filter">Filter</string>
-    <string name="notifications">Notifications</string>
-    <string name="messages">Messages</string>
-    <string name="login_success">Success</string>
-    <string name="login_failed">Login unsuccessful</string>
-    <string name="login_manager">Manager Identified!</string>
-    <string name="choose_domain">Choose domain</string>
-    <string name="find">Find</string>
-    <string name="cancel">Cancel</string>
-    <string name="find_new_exam">Find new exam</string>
-    <string name="protocol">Protocol</string>
-    <string name="Information">Information</string>
-    <string name="Report">Report</string>
-    <string name="Images">Images</string>
-    <string name="Close">Close</string>
-    <string name="search">Search</string>
+    <string name="authenticating_message">Autenticando&#8230;</string>
+    <string name="exams">Exames</string>
+    <string name="filter">Filtro</string>
+    <string name="notifications">Notificações</string>
+    <string name="messages">Mensagens</string>
+    <string name="login_success">Registrado</string>
+    <string name="login_failed">Erro no login</string>
+    <string name="login_manager">Identificado Manager!</string>
+    <string name="choose_domain">Escolha o domínio</string>
+    <string name="find">Procurar</string>
+    <string name="cancel">Cancelar</string>
+    <string name="find_new_exam">Localizar exame</string>
+    <string name="protocol">Protocolo</string>
+    <string name="Information">Informações</string>
+    <string name="Report">Laudo</string>
+    <string name="Images">Imagens</string>
+    <string name="Close">Fechar</string>
+    <string name="search">Procurar</string>
     <string name="menu_search">Search menu</string>
     <string name="search_hint">search hint</string>
-    <string name="exam_literal">EXAM</string>
-    <string name="comments">Comments</string>
-    <string name="Image_Overview">IMAGE OVERVIEW</string>
-    <string name="show_comments">SHOW COMMENTS</string>
-    <string name="server_error">Server Error. Try again or contact gs</string>
-    <string name="choose_role">Choose Role</string>
-    <string name="empty_creds">Username and password cannot be empty</string>
-    <string name="ExamStatus">Exam Status</string>
-    <string name="SortBy">Sort By</string>
-    <string name="sort">Sort</string>
-    <string name="sortexams">Sort Exams</string>
-    <string name="exam_type">Exam Type</string>
-    <string name="exam_id">Exam Id</string>
-    <string name="exam_clinic">Exam Clinic</string>
-    <string name="exam_patient">Exam Patient</string>
+    <string name="exam_literal">EXAME</string>
+    <string name="comments">Comentários</string>
+    <string name="Image_Overview">Imagens (Geral)</string>
+    <string name="show_comments">EXIBIR COMENTÁRIOS</string>
+    <string name="server_error">Erro #001SRV. Tente novamente ou contacte o suporte.</string>
+    <string name="choose_role">Escolher perfil</string>
+    <string name="empty_creds">Usuário e senha não podem estar em branco</string>
+    <string name="ExamStatus">Status do exame</string>
+    <string name="SortBy">Ordenar por</string>
+    <string name="sort">Ordenar</string>
+    <string name="sortexams">Ordenar Exames</string>
+    <string name="exam_type">Tipo de exame</string>
+    <string name="exam_id">ID do exame</string>
+    <string name="exam_clinic">Clínica</string>
+    <string name="exam_patient">Paciente</string>
     <string name="date_literal">23/04/2016 12:10</string>
-    <string name="exam_reporting_phys">Reporting Physician</string>
-    <string name="information">Information</string>
+    <string name="exam_reporting_phys">Médico Responsável</string>
+    <string name="information">Informações</string>
     <string name="comment_example">Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken.</string>
-    <string name="information_error">NOT FOUND</string>
-    <string name="information_error_response">Try again or contact an administrator</string>
-    <string name="patient">Patient</string>
-    <string name="report">Report</string>
-    <string name="reporting">Reporting Physician</string>
-    <string name="referring">Referring Physician</string>
-    <string name="executionDate">Execution Date</string>
+    <string name="information_error">NÃO ENCONTRADO</string>
+    <string name="information_error_response">Tente novamente ou contacte o suporte.</string>
+    <string name="patient">Paciente</string>
+    <string name="report">Laudo</string>
+    <string name="reporting">Profissional responsável</string>
+    <string name="referring">Profissional solicitante</string>
+    <string name="executionDate">Data do exame</string>
     <string name="asc">ASC</string>
     <string name="desc">DESC</string>
-    <string name="identification">Identification</string>
+    <string name="identification">Identificação</string>
     <string name="test_wrong_password">wrongpassword</string>
     <string name="test_multi_role_password">admin</string>
     <string name="test_multi_role_user">doctor</string>
@@ -62,98 +62,98 @@
     <string name="test_single_role_password">Admin1</string>
     <string name="gs_role_option_pro">Professional</string>
     <string name="ready_char">R</string>
-    <string name="ready">Ready</string>
-    <string name="available">Available</string>
+    <string name="ready">Pronto</string>
+    <string name="available">Disponível</string>
     <string name="finished_char">F</string>
-    <string name="finished">Finished</string>
-    <string name="exam_overview_failed">Failed to load exams…</string>
-    <string name="noImages">No images available…</string>
-    <string name="auth_failed">Wrong password or username entered</string>
-    <string name="logout">Logout</string>
-    <string name="examIdentification">Exam Identification</string>
-    <string name="accessCode">Access Code</string>
-    <string name="gs_exam_write_comment_hint">Start writing a comment &#8230;</string>
-    <string name="clinic">Clinic</string>
+    <string name="finished">Pronto</string>
+    <string name="exam_overview_failed">Impossível abrir exames…</string>
+    <string name="noImages">Imagens não disponíveis</string>
+    <string name="auth_failed">Usuário ou senha inválidos</string>
+    <string name="logout">Sair</string>
+    <string name="examIdentification">Identificação</string>
+    <string name="accessCode">Protocolo</string>
+    <string name="gs_exam_write_comment_hint">Escrever comentário &#8230;</string>
+    <string name="clinic">Clínica</string>
     <string name="sort_icon">Sort Icon</string>
-    <string name="forgot_pwd">Forgot your password?</string>
-    <string name="write_email_below">Write your email below and click submit.</string>
-    <string name="email_notification_msg">An email will be sent to your inbox to reset your password.</string>
-    <string name="submit">Submit</string>
-    <string name="write_email_here">Email address</string>
-    <string name="snackReqPwd">Email sent. Check your inbox for further instructions.</string>
-    <string name="snackNoReqPwd">Email not sent. Something went wrong. Try again </string>
-    <string name="anonymous_exam">No account?\nDirectly access an exam</string>
+    <string name="forgot_pwd">Esqueci minha senha</string>
+    <string name="write_email_below">Insira seu email e clique enviar...</string>
+    <string name="email_notification_msg">Foi enviado um email com as instruções para recuperar sua senha.</string>
+    <string name="submit">Enviar</string>
+    <string name="write_email_here">Email</string>
+    <string name="snackReqPwd">Email enviado. Verifique sua caixa de entrada.</string>
+    <string name="snackNoReqPwd">Email não enviado. Verifique e tente novamente.</string>
+    <string name="anonymous_exam">Não é cadastrado?\nAcesse diretamente</string>
     <string name="Enter_email">Email *</string>
-    <string name="Enter_password">Password *</string>
-    <string name="Re_enter_password">Verify your password *</string>
-    <string name="account_info">Account Information</string>
-    <string name="personal_info">Personal Information</string>
-    <string name="first_name">First name *</string>
-    <string name="last_name">Last name *</string>
-    <string name="password_info">Your password has to be at least 5 characters long and include at least 1 number, uppercase letter and lowercase letter (e.g: Abcd1)</string>
-    <string name="gender">Gender</string>
+    <string name="Enter_password">Senha *</string>
+    <string name="Re_enter_password">Verifique sua senha *</string>
+    <string name="account_info">Informações da conta</string>
+    <string name="personal_info">Informações pessoais</string>
+    <string name="first_name">Primeiro nome *</string>
+    <string name="last_name">Sobrenome *</string>
+    <string name="password_info">Sua senha deve conter pelo menos 5 caracteres e incluir ao menos uma letra maiúscula, uma minúscula e um número.</string>
+    <string name="gender">Sexo</string>
     <string name="female_abbr">F</string>
     <string name="male_abbr">M</string>
-    <string name="female">Woman</string>
-    <string name="male">Man</string>
-    <string name="city">City *</string>
-    <string name="language">Language *</string>
-    <string name="birth_date">Select your date of birth *</string>
-    <string name="select_birth_date">Select birth date</string>
-    <string name="id_type">Type of Identification *</string>
-    <string name="personal_id">Identification No *</string>
-    <string name="password_verify_info">Both passwords have to be the same.</string>
-    <string name="create_account">CREATE ACCOUNT</string>
-    <string name="must_befilled_in">Make sure all fields are filled in.</string>
-    <string name="invalid_entry">is not a valid entry.\\nCheck for mistakes and try again please..</string>
-    <string name="country">Country *</string>
-    <string name="brazil">Brazil</string>
-    <string name="other">Other</string>
-    <string name="createAccount">Create an account</string>
-    <string name="moreInfo">To get more information</string>
-    <string name="exam_associated_succesful">Exam successfully associated</string>
-    <string name="exam_already_associated">Exam already associated</string>
-    <string name="exam_associated_fail">Exam not found or wrong access code</string>
-    <string name="exam_associated_internalfail">Exam not found</string>
+    <string name="female">Feminino</string>
+    <string name="male">Masculino</string>
+    <string name="city">Cidade *</string>
+    <string name="language">Idioma *</string>
+    <string name="birth_date">Data de nascimento *</string>
+    <string name="select_birth_date">Selecione a data de nascimento</string>
+    <string name="id_type">Tipo de identificação *</string>
+    <string name="personal_id">Número de identificação *</string>
+    <string name="password_verify_info">Ambas as senhas devem ser idênticas.</string>
+    <string name="create_account">CRIAR CONTA</string>
+    <string name="must_befilled_in">Certifique-se de que todos os campos estão preenchidos.</string>
+    <string name="invalid_entry">entrada inválida.\\nVerifique e tente novamente.</string>
+    <string name="country">País *</string>
+    <string name="brazil">Brasil</string>
+    <string name="other">Outro</string>
+    <string name="createAccount">Criar sua cona</string>
+    <string name="moreInfo">mais informações</string>
+    <string name="exam_associated_succesful">Exame associado</string>
+    <string name="exam_already_associated">Exame já associado.</string>
+    <string name="exam_associated_fail">Exame não encontrado ou protocolo inválido.</string>
+    <string name="exam_associated_internalfail">Exame não encontrado</string>
     <string name="identification_required">Identification is required!</string>
-    <string name="accesscode_required">Access code is required!</string>
+    <string name="accesscode_required">Protocolo não pode estar em branco!</string>
     <string name="id_and_ac_required">Identification and access code are required!</string>
     <string name="test_add_exam_id">GKS0004</string>
     <string name="test_add_exam_accesscode">01012001</string>
     <string name="test_add_exam_accesscode_wrong">01012002</string>
-    <string name="associate">Associate Exam</string>
-    <string name="exam_referring_phys">Referring physician</string>
-    <string name="download_documents">Documents</string>
+    <string name="associate">Associar exame</string>
+    <string name="exam_referring_phys">Profissional responsável</string>
+    <string name="download_documents">Anexos</string>
     <string name="patient_role">ROLE_PATIENT</string>
     <string name="pdf">Pdf icon</string>
-    <string name="no_report">No report was found for this exam.</string>
-    <string name="snack_doc_not_found">Document not found!</string>
-    <string name="opened">Opened</string>
-    <string name="loading">Loading</string>
-    <string name="in_progress">In progress</string>
-    <string name="register_failed">Failed to register</string>
-    <string name="register_success">Registration Success!</string>
-    <string name="future_login">You now can login with your user details.</string>
-    <string name="comment_failed">Something went wrong posting the comment</string>
-    <string name="comment_empty">You can\'t post empty comments.</string>
-    <string name="emergencyExams">Emergency Exams</string>
-    <string name="writing">Writing</string>
-    <string name="waiting_rev">Waiting Review</string>
-    <string name="rev_rejected">Review Rejected</string>
-    <string name="delivered">Delivered</string>
-    <string name="blank">Blank</string>
-    <string name="unknown">Unknown</string>
+    <string name="no_report">Nenhum laudo encontrado para este exame.</string>
+    <string name="snack_doc_not_found">Anexos não encontrados!</string>
+    <string name="opened">Aberto</string>
+    <string name="loading">Carregando</string>
+    <string name="in_progress">Em progresso</string>
+    <string name="register_failed">Erro ao registrar</string>
+    <string name="register_success">Registro realizado.</string>
+    <string name="future_login">Você agora pode se logar com seus dados.</string>
+    <string name="comment_failed">Erro ao registrar comentário</string>
+    <string name="comment_empty">O comentário não pode estar vazio.</string>
+    <string name="emergencyExams">Emergências</string>
+    <string name="writing">Laudando</string>
+    <string name="waiting_rev">Aguardando revisão</string>
+    <string name="rev_rejected">Rejeitado pelo revisor</string>
+    <string name="delivered">Entregue</string>
+    <string name="blank">Em branco</string>
+    <string name="unknown">Desconhecido</string>
     <string name="test_forgot_pwd_email">patient2@gksis.com.br</string>
-    <string name="submitting">Submitting request..</string>
-    <string name="success">Success</string>
+    <string name="submitting">Enviando solicitação...</string>
+    <string name="success">Feito</string>
     <string name="test_anon_patient">JOHN SMITH</string>
     <string name="test_anon_reporting_phys">Médico Teste</string>
     <string name="check_id_for_description">Check the id for a gist of what the view represents</string>
-    <string name="pdf_no_perm">The document could not be added to your download folder</string>
-    <string name="pdf_no_reader">No PDF Reader was found on this phone. Please install one and try again.</string>
-    <string name="searching_for_exam">Searching for the exam...</string>
-    <string name="creating_account">Creating your account</string>
-    <string name="created_account">Account created</string>
+    <string name="pdf_no_perm">O documento não pode ser salvo.</string>
+    <string name="pdf_no_reader">Nenhum leitor de PDF localizado. Instale um e tente novamente.</string>
+    <string name="searching_for_exam">Localizando exame...</string>
+    <string name="creating_account">Registrando sua conta</string>
+    <string name="created_account">Conta registrada</string>
     <string name="CPF">CPF</string>
 
     <!--Arrays-->
